--- a/app/Rmd/report_01.Rmd
+++ b/app/Rmd/report_01.Rmd
@@ -1,15 +1,12 @@
 ---
-title: "Report #1"
+title: "Report #2"
 author: "inSileco"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: 
   pdf_document:
     fig_caption: true
-  html_document:
-      toc: yes
-      toc_float: yes
 --- 
 
 # First part 
 
-This is it the report to be used. 
+This is it the report to be used \#1.
