--- a/app/output/doc/species_at_risk.Rmd
+++ b/app/output/doc/species_at_risk.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Reproducible Report for Species in Maritimes Region - for Internal DFO use only"
 author: Synthesis prepared by the MSP Team
-email: 
-user: 
+email: lipsum@dfo-mpo.gc.ca
+user: Lorem ipsum
 notes: ""
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
