:sparkles: handle en and fr

--- a/app/output/report_pt1_generic_intro_EN.Rmd
+++ b/app/output/report_pt1_generic_intro_EN.Rmd
@@ -7,6 +7,8 @@ output:
   html_document:
     theme: paper
     toc: yes
+  pdf_document:
+    toc: yes
   word_document:
     toc: yes
 ---
@@ -177,7 +179,8 @@ For information about seabirds please contact Environment and Climate Change Can
 There are sources of data and information that were not included in this report. These include data from past studies/publications, acoustic detections, prey sampling and tagging. While the value of these data in predicting and describing cetacean occurrence is vital, these types of data are not available for all species and are not yet available for data querying. In the future, as information from other data sources becomes available, it too will help to provide a more comprehensive understanding of cetacean use and occurrence in the search areas.
 
 # **Additional Notes**
-Should you receive a request for set-level Observer data (ISDB) and MARFIS, please just forward to Peter Comeau and <XMARComData@dfo-mpo.gc.ca>, respectively. Please feel free to use the email template below. Note that the template includes an attachment which you can download here - Informal Release Guidelines <\\ent.dfo-mpo.ca\ATLShares\Shared\ATIP Information\Informal_Release_Guidelines-eng.docx>.
+Should you receive a request for set-level Observer data (ISDB) and MARFIS, please just forward to Peter Comeau and <XMARComData@dfo-mpo.gc.ca>, respectively. Please feel free to use the email template below. Note that the template includes an attachment which you can download here - Informal Release Guidelines 
+<!-- <\\ent.dfo-mpo.ca\ATLShares\Shared\ATIP Information\Informal_Release_Guidelines-eng.docx>. -->
 
 Hi,
 
