:fire: remove code chunk from extra rmd

--- a/app/Rmd/report_pt8_Appendix_EN.Rmd
+++ b/app/Rmd/report_pt8_Appendix_EN.Rmd
@@ -1,98 +1,3 @@
 # **Appendix**
 
-```{r read fish and invertebrate files, eval=FALSE, include=FALSE, cache=FALSE}
-fl <- list.files(dataPath,".csv")
-rv_OD_shp <- st_read("../../../Data/mar.wrangling/RVSurvey_OpenData/SUMMER_2020.shp", quiet=TRUE)
-rv_OD <- read.csv("../../../Data/mar.wrangling/RVSurvey_OpenData/SUMMER_2020_summary.csv")
-rv_OD_min_year <- rv_OD[which(year(rv_OD$SDATE)>=minYear),]
-isdb <- read.csv(file.path(dataPath,fl[grep("isdb_",fl)]))
-isdb <- isdb[which(year(isdb$DATE_TIME2)>=minYear),]
-marfis <- read.csv(file.path(dataPath,fl[grep("marfis_",fl)]))
-marfis <- marfis[which(year(marfis$DATE_FISHED)>=minYear),]
-obis<-read.csv("../../../Data/NaturalResources/Species/OBIS_CBIF_iNaturalist/OBIS_MAR_priority_records.csv")
-obis<-subset(obis,year>minYear,year<maxYear)
-cws<-read.csv("../../../Data/NaturalResources/Species/CWS_ECCC/CWS_ECCC_OBIS_records.csv")
-cws<-subset(cws,year>minYear,year<maxYear)
-inat<-read.csv("../../../Data/NaturalResources/Species/OBIS_CBIF_iNaturalist/iNaturalist_MAR_priority_records.csv")
-inat<-subset(inat,datetime>minYear,datetime<maxYear)
-```
-
-```{r RV Survey Search Results, eval=FALSE, include=FALSE, cache=FALSE}
-#still working to provide multiple data sources for locations and seasons (Summer, spring and fall surveys)
-#the following is specialized for this location.
-m <-merge(rv_OD_shp, rv_OD_min_year, by='SETNO')
-RVsf<-st_as_sf(m)
-
-#subbing in Gully for temporary demo purposes.
-#Gully<-st_read("../../../Data/Zones/SearchPEZpolygons/PEZ_TestGullyPolygon.shp")
-#rv_intersect <- st_intersection(RVsf,Gully)
-
-rv_intersect <- st_intersection(RVsf,PEZ_poly_st)
-x<-as.numeric(nrow(rv_intersect))
-CommonName<-rv_intersect$COMM
-Species<-rv_intersect$SPEC_GS
-
-rv_intersect_freq <- aggregate(
-  x = list(Records = rv_intersect$COMM),
-  by = list(Species = rv_intersect$COMM),
-  length)
-
-rv_intersect_freq <- aggregate(
-  x = list(Records = rv_intersect$COMM),
-  by = list(CommonName = rv_intersect$COMM, Species = rv_intersect$SPEC.GSSPECIES),
-  length)
-
-rv_intersect_freq <- rv_intersect_freq[order(-rv_intersect_freq$Records),]
-rownames(rv_intersect_freq) <- c()
-```
-
-```{r ISDB survey search results, eval=FALSE, include=FALSE, cache=FALSE}
-##skip all of these steps and create an isdb file for all of the MAR region.
-#df_to_shp(df= isdb, file = "isdb_shp", lat.field = "LATITUDE",lon.field = "LONGITUDE")
-isdb_shp <- st_read("../../../Data/outputs/FarmersLedge4748m/isdb_20190927_1201.shp", quiet=TRUE)
-isdb_intersect <- st_intersection(isdb_shp,PEZ_poly_st)
-isdb_sites<-data.frame(longitude=isdb_intersect$LONGITUDE, latitude=isdb_intersect$LATITUDE)
-isdb_freq <- aggregate(
-      x = list(Records = isdb_intersect$SCIENTIFI1),
-      by = list(Species = isdb_intersect$SCIENTIFI1),
-      length)
-isdb_freq <- isdb_freq[order(-isdb_freq$Records),]
-rownames(isdb_freq) <- c()
-```
-
-```{r MARFIS search results, eval=FALSE, include=FALSE, cache=FALSE}
-##skip all of these steps and create an isdb file for all of the MAR region.
-#df_to_shp(df= isdb, file = "isdb_shp", lat.field = "LATITUDE",lon.field = "LONGITUDE")
-marfis_shp <- st_read("../../../Data/outputs/FarmersLedge4748m/marfis_20190927_1202.shp", quiet=TRUE)
-marfis_intersect <- st_intersection(marfis_shp,PEZ_poly_st)
-marfis_sites<-data.frame(longitude=marfis_intersect$LONGITUDE, latitude=marfis_intersect$LATITUDE)
-marfis_freq <- aggregate(
-      x = list(Records = marfis_intersect$SPECIENAME),
-      by = list(Species = marfis_intersect$SPECIENAME),
-      length)
-marfis_freq <- marfis_freq[order(-marfis_freq$Records),]
-rownames(marfis_freq) <- c()
-```
-
-**Table S1:** RV survey observation records contained within the polygon summarized by species or species group.
-
-```{r}
-kable(rv_intersect_freq) %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-```
-
-**Table S2:** ISDB observation records contained within the polygon summarized by species or species group.
-
-```{r}
-kable(isdb_freq) %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-```
-
-**Table S3:** MARFIS observation records contained within the polygon summarized by species or species group.
-
-```{r}
-kable(marfis_freq) %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
-```
-
-
+AJOUTER L'APPENDIX ICI.
