:sparkles: add notification

--- a/app/Rmd/report_pt1_generic_intro_FR.Rmd
+++ b/app/Rmd/report_pt1_generic_intro_FR.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducible Report for Species in Maritimes Region - for Internal DFO use only"
+title: "Reproducible Report for Species in Maritimes Region - for Internal DFO use only (FR)"
 author: {{u_text}}
 email: {{u_name}}
 date: '`r format(Sys.time(), "%d %B, %Y")`'
