--- a/app/Rmd/report_pt3_fish_inverts_FR.Rmd
+++ b/app/Rmd/report_pt3_fish_inverts_FR.Rmd
@@ -1,3 +1,3 @@
-## **Fish and Invertebrate Section**
+## **FISH AND INVERTEBRATES**
 
-### **Ecosystem Research Vessel (RV) Survey**  
+Translation and outputs under-development
