--- a/app/Rmd/report_pt6_EBSA_EN.Rmd
+++ b/app/Rmd/report_pt6_EBSA_EN.Rmd
@@ -1,12 +1,20 @@
-# **Search Results for Species at Risk**  
+## **AREAS DESIGNATED FOR SPATIAL PLANNING**  
 
-## **Ecologically and Biologically Significant Areas (EBSA)**  
-Contact: <https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>  
-Tier of confidence: **High**  
-Search year:  
+### **Ecologically and Biologically Significant Areas (EBSA)**  
+Contact: <Liisa.Peramaki@dfo-mpo.gc.ca>  
+Last retrieved on: January 21, 2021 from Open Data  
+<https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>  
+Quality Tier: High  
+Security level: none  
 
-Ecologically and Biologically Significant Areas (EBSAs) are areas within Canada's oceans that have been identified through formal scientific assessments as having special biological or ecological significance when compared with the surrounding marine ecosystem.  
+Dataset description (from the Open Data record): Ecologically and Biologically Significant Areas (EBSAs) are areas within Canada's oceans that have been identified through formal scientific assessments as having special biological or ecological significance when compared with the surrounding marine ecosystem. Failure to define an area as an EBSA does not mean that it is unimportant ecologically. All areas serve ecological functions to some extent and require sustainable management. Rather, areas identified as EBSAs should be viewed as the most important areas where, with existing knowledge, regulators and marine users should be particularly risk averse to ensure ecosystems remain healthy and productive. EBSA information is used to inform marine planning, including environmental assessment and the siting of marine-based activities, by:
 
-Failure to define an area as an EBSA does not mean that it is unimportant ecologically. All areas serve ecological functions to some extent and require sustainable management. Rather, areas identified as EBSAs should be viewed as the most important areas where, with existing knowledge, regulators and marine users should be particularly risk averse to ensure ecosystems remain healthy and productive.
+- Informing and guiding project-specific or regional environmental assessments
+- Informing and guiding industries and regulators in their planning and operations, for example: EBSAs have been acknowledged and referred to (often as "Special Areas" or "Potentially Sensitive Areas") in oil and gas related assessments
+- EBSA information has been provided to proponents of submarine cable projects to be used for route planning purposes
+- Informing and guiding Integrated Oceans Management (IOM) process within five Large Ocean Management Areas (LOMAs) and twelve marine bioregions
+- Serving as a basis for the identification of Areas of Interest (AOIs) and of Marine Protected Areas (MPAs) (individually and in the context of planning bioregional networks of MPAs).
 
-#### **EBSA search results**
+#### ***Area-specific EBSA search results***  
+
+**under-development**
