--- a/app/Rmd/report_pt3_fish_inverts_EN.Rmd
+++ b/app/Rmd/report_pt3_fish_inverts_EN.Rmd
@@ -27,7 +27,7 @@ Security level: Protected B
 
 The Industry Survey Database (ISDB) is a departmental database containing at-sea fish catch observations from commercial fishing vessels operating in the Northwest Atlantic. Industry surveys are not spatially or temporally synoptic and, therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding areas) from larger-scale studies is strongly recommended. Fisheries catch and effort information for an individual license holder is considered personal information and is protected under section 19 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-12), and, for a corporate license holder, is considered to be sensitive, proprietary information and protected under Section 20 of the Access to Information Act (https://laws-lois.justice.gc.ca/eng/acts/a-1/page-5.html#h-13).
 
-Without written consent, DFO is not permitted to release information or data products from ISDB (e.g., maps and data layers) that might reveal personal or third party information such as catch, landed values, and vessel-specific fishing locations, as this information is considered confidential. Information on privacy policy is available in the DFO staff informal release guidelines (i.e., Appendix B – “Catch and Effort and Quota Information: Do’s and Don’ts for Informal Release” <dfo-mpo.caInformation_Release_Guidelines-eng.docx>). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
+Without written consent, DFO is not permitted to release information or data products from ISDB (e.g., maps and data layers) that might reveal personal or third party information such as catch, landed values, and vessel-specific fishing locations, as this information is considered confidential. Information on privacy policy is available in the DFO staff informal release guidelines (i.e., Appendix B – “Catch and Effort and Quota Information: Do’s and Don’ts for Informal Release” (\\\\ent.dfo-mpo.ca\\ATLShares\\Shared\\ATIP Information\\Information_Release_Guidelines-eng.docx). If you are interested in including observer data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r). 
 
 #### ***The Maritime Fishery Information System (MARFIS)***  
 Contact: <XMARComData@dfo-mpo.gc.ca>  
