incorporated figure captions for all sections; note that captions will not be displayed in Rmarkdowns until plots are generated.
C. Gomez did some formatting tweaks to adjsut for html and pdf versions.

Text for fig captions was created by C. Gomez and G. Puncher.

G. Puncher did all the formatting for the figure captions.

Steering commitee reviewed and approved text.

--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -21,3 +21,6 @@ Data notes:
 #### ***Area-specific Intertidal Vegetation and Rockweed search results***  
 
 **under-development**
+
+```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
+```
