--- a/app/Rmd/report_SARA_EN.Rmd
+++ b/app/Rmd/report_SARA_EN.Rmd
@@ -1,6 +1,6 @@
 ## **INFORMATION FROM NATIONAL AQUATIC SPECIES AT RISK PROGRAM**    
 **Contact:** Carolyn Bakelaar  
-**URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
+**Internal GIS Tool URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
 
 This section describes Species At Risk distribution/range and critical habitat maps. The official source of information for Species At Risk is the Species At Risk Public Registry www.sararegistry.gc.ca.
 
@@ -14,18 +14,18 @@ Below, we provide a list and examination of data products that may overlap with 
 ### **Species At Risk distribution and Critical Habitat data**    
 
 #### ***DFO Species At Risk distribution (range)*** {-}    
+
 Contact: <info@dfo-mpo.gc.ca>  
-Link: <https://open.canada.ca/data/en/dataset/e0fabad5-9379-4077-87b9-5705f28c490b>  
-Last retrieved on: October 1 2020 from Open Data  
+Link:  Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/e0fabad5-9379-4077-87b9-5705f28c490b>
 Quality Tier: High  
 Security level: none  
 
 Dataset description from the Open Data record [@OpenData_SARrange]: The Species At Risk Program is responsible for carrying out DFO’s mandate under the _Species At Risk Act_ (SARA) to protect, recover and conserve all listed aquatic Species At Risk in Canada. As part of this mandate, this spatial database has been developed to identify areas in which aquatic species listed under SARA may be found. Distribution (range) polygons and lines were assembled by regional SARA biologists using the best available information, including COSEWIC status reports, recovery potential assessments, academic literature, and expert opinion. These spatial data support the protection, recovery and conservation of species listed as Endangered, Threatened or Special Concern under SARA. Species distributions are also described and displayed in Recovery Strategies, Action Plans and/or Management Plans. Discrepancies may exist between the distribution data shown in a species’ SARA recovery document and the current spatial data available through the GIS tool; please contact DFO for more information on any data discrepancies.
 
 #### ***Critical Habitat of Species At Risk***    
+
 Contact: <info@dfo-mpo.gc.ca>  
-Link: <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>  
-Last retrieved on: October 1 2020 from Open Data  
+Last retrieved on: October 1 2020 from Open Data  <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>
 Quality Tier: High  
 Security level: none  
 
